--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,20 @@
-body{
-background-color: aqua;
-font-family: sans-serif;
+body {
+    background-color: rgb(238, 115, 78);
+    font-family: sans-serif;
+    font-weight: 50;
+    font-size: x-large;
+    width: 100%;
+    height: 100%;
+
 }
+
+.thebox {
+    margin: 25px;
+    width: 50%;
+    /* justify-content: space-between;
+    align-content: center; */
+    /* justify-self: flex-end; */
+    /* align-items:flex-end */
+}
+
+
