--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -8,7 +8,7 @@
     </head>
 </head>
 <body>
-    Please leave a comment!
+    Add to your Grocery List!
         <!-- <form action="/login" method="POST">
             <label for="Email">Email:</label>
             <input type="text" name="email" required>
@@ -17,10 +17,28 @@
             <input type="submit" value="Submit">
         </form> -->
 
+<body>
+    <h1>
+        <%= title %>
+    </h1>
+    <ul>
+        <%items.forEach((fruit)=> { %>
+            <li>
+                <%=fruit %>
+            </li>
+            <%}) %>
+    </ul>
+    <p>
 
-        <form action="/comment" method="POST">
-            COMMENT HERE: <input type="text" name="comment">
-            <input type="submit">
-        </form>
+        <%- htmlContent %>
+    </p>
+    <%- include("footer.ejs") %>
+</body>
+
+</html>
+
+</html>
+
+    
 </body>
 </html>
