added a header and footer everything working except for the image. moving on to the index.js

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
 </body>
+<footer class="foot">
+    <div class="container-fluid">
+        <a href="http://www.linkedin.com/in/jackieboutwell" target="_blank" class="foot-link"><i
+                class="social-icon fab fa-github"></i></a>
+        <a href="www.linkedin.com/in/jackieboutwell" target="_blank" class="foot-link"><i
+                class="social-icon fab fa-linkedin"></i></a>
+    </div>
+    © Jackie Boutwell
+</footer>
+
 </html>
