--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,12 +1,15 @@
-</body>
-<footer class="foot">
-    <div class="container-fluid">
-        <a href="http://www.linkedin.com/in/jackieboutwell" target="_blank" class="foot-link"><i
-                class="social-icon fab fa-github"></i></a>
-        <a href="www.linkedin.com/in/jackieboutwell" target="_blank" class="foot-link"><i
-                class="social-icon fab fa-linkedin"></i></a>
-    </div>
-    © Jackie Boutwell
-</footer>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-</html>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="todo-list">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <title>To Do List</title>
+    <link rel="shortcut icon" href="../images/list.png" type="image/x-icon">
+    <link rel="stylesheet" href="/styles.css">
+
+</head>
+
+<body>
+    
