--- a/views/storeList.ejs
+++ b/views/storeList.ejs
@@ -23,9 +23,9 @@
                     <%}) %>
             </ul>
 
-            <form class="item" action="/add" method="post">
-                <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
-                <button type="submit" name="list" value="">+</button>
+            <form class="item" action="/add/" method="post">
+                <input id="add-input" type="text" name="newItem" placeholder="New Item" autocomplete="off" required>
+                <button type="submit" name="list" value="add">+</button>
             </form>
         </div>
     </body>
