--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 </body>
 <footer class="foot">
     <div class="container-fluid">
-        <a href="http://www.linkedin.com/in/jackieboutwell" target="_blank" class="foot-link"><i
+        <a href="https://github.com/JackieBoutwell?tab=overview&from=2024-04-01&to=2024-04-26" target="_blank" class="foot-link"><i
                 class="social-icon fab fa-github"></i></a>
         <a href="www.linkedin.com/in/jackieboutwell" target="_blank" class="foot-link"><i
                 class="social-icon fab fa-linkedin"></i></a>
